--- a/src/ManageUserAccounts.fxml
+++ b/src/ManageUserAccounts.fxml
@@ -8,20 +8,46 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <HBox fx:id="ManageUserAccountsController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="759.0" prefWidth="1155.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER" fillWidth="false" prefHeight="674.0" prefWidth="207.0" style="-fx-background-color: #ffffff;">
          <children>
             <VBox alignment="CENTER" prefHeight="511.0" prefWidth="168.0" VBox.vgrow="ALWAYS">
                <children>
-                  <Label text="DASHBOARD" />
-                  <Label text="QUICK NAVIGATION" textAlignment="CENTER" />
-                  <Hyperlink text="Monitor Transactions" />
-                  <Hyperlink text="Buying &amp; Sales Record" />
-                  <Hyperlink text="Manage User Accounts" />
-                  <Hyperlink text="System Configuration" />
+                  <Label text="DASHBOARD">
+                     <VBox.margin>
+                        <Insets bottom="80.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="18.0" />
+                     </font></Label>
+                  <Label text="QUICK NAVIGATION" textAlignment="CENTER">
+                     <VBox.margin>
+                        <Insets bottom="30.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font></Label>
+                  <Hyperlink text="Monitor Transactions">
+                     <VBox.margin>
+                        <Insets bottom="15.0" />
+                     </VBox.margin></Hyperlink>
+                  <Hyperlink text="Buying &amp; Sales Record">
+                     <VBox.margin>
+                        <Insets bottom="15.0" />
+                     </VBox.margin></Hyperlink>
+                  <Hyperlink text="Manage User Accounts">
+                     <VBox.margin>
+                        <Insets bottom="15.0" />
+                     </VBox.margin></Hyperlink>
+                  <Hyperlink text="System Configuration">
+                     <VBox.margin>
+                        <Insets bottom="15.0" />
+                     </VBox.margin></Hyperlink>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </VBox>
          </children>
       </VBox>
@@ -30,31 +56,40 @@
             <HBox layoutX="-207.0" prefHeight="100.0" prefWidth="1177.0" style="-fx-background-color: #f0c845;" />
             <HBox layoutX="14.0" layoutY="216.0" prefHeight="162.0" prefWidth="918.0">
                <children>
-                  <VBox alignment="CENTER" prefHeight="162.0" prefWidth="158.0" style="-fx-border-color: gray;">
+                  <VBox alignment="CENTER" prefHeight="162.0" prefWidth="158.0" style="-fx-border-color: gray; -fx-background-color: white; -fx-border-radius: 4px;">
                      <HBox.margin>
                         <Insets left="20.0" right="50.0" />
                      </HBox.margin>
                      <children>
-                        <Label text="Total Buyer Accounts" />
+                        <Label text="Total Buyer Accounts">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="162.0" prefWidth="178.0" style="-fx-border-color: grey;">
+                  <VBox alignment="CENTER" prefHeight="162.0" prefWidth="178.0" style="-fx-border-color: grey; -fx-background-color: white; -fx-border-radius: 4px;">
                      <HBox.margin>
                         <Insets left="10.0" right="10.0" />
                      </HBox.margin>
                      <children>
-                        <Label text="Total Seller Accounts" />
+                        <Label text="Total Seller Accounts">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="12.0" />
+                           </font></Label>
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="162.0" prefWidth="171.0" style="-fx-border-color: grey;">
+                  <VBox alignment="CENTER" prefHeight="162.0" prefWidth="171.0" style="-fx-border-color: grey; -fx-background-color: white; -fx-border-radius: 4px;">
                      <HBox.margin>
                         <Insets left="50.0" right="10.0" />
                      </HBox.margin>
                      <children>
-                        <Label text="New Buyer Accounts" />
+                        <Label text="New Buyer Accounts">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="12.0" />
+                           </font></Label>
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="162.0" prefWidth="170.0" style="-fx-border-color: grey;">
+                  <VBox alignment="CENTER" prefHeight="162.0" prefWidth="170.0" style="-fx-border-color: grey; -fx-background-color: white; -fx-border-radius: 4px;">
                      <HBox.margin>
                         <Insets left="50.0" right="10.0" />
                      </HBox.margin>
@@ -64,10 +99,32 @@
                   </VBox>
                </children>
             </HBox>
-            <HBox layoutX="31.0" layoutY="457.0" prefHeight="280.0" prefWidth="891.0" />
+            <HBox alignment="CENTER" layoutX="31.0" layoutY="457.0" prefHeight="150.0" prefWidth="891.0">
+               <children>
+                  <HBox prefHeight="55.0" prefWidth="350.0" style="-fx-border-color: grey; -fx-background-color: white; -fx-border-radius: 4px;">
+                     <HBox.margin>
+                        <Insets left="50.0" right="200.0" />
+                     </HBox.margin>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="350.0" style="-fx-border-color: grey; -fx-background-color: white; -fx-border-radius: 4px;">
+                     <HBox.margin>
+                        <Insets left="50.0" right="50.0" />
+                     </HBox.margin>
+                  </HBox>
+               </children></HBox>
             <Label layoutX="48.0" layoutY="148.0" prefHeight="35.0" prefWidth="336.0" text="MANAGE USER ACCOUNTS" textFill="#6f2922">
                <font>
                   <Font name="Arial Rounded MT Bold" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="96.0" layoutY="405.0" text="Buyer Accounts" textFill="#808080">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="27.0" />
+               </font>
+            </Label>
+            <Label layoutX="619.0" layoutY="405.0" text="Seller Accounts" textFill="GREY">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="27.0" />
                </font>
             </Label>
          </children>
