--- a/src/ManageUserAccounts.fxml
+++ b/src/ManageUserAccounts.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -54,6 +55,14 @@
                         <Insets bottom="15.0" />
                      </VBox.margin>
                   </Hyperlink>
+                  <Button fx:id="logoutButton" mnemonicParsing="false" style="-fx-background-color: gray; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 5; -fx-max-width: 200px;" text="Logout">
+                     <VBox.margin>
+                        <Insets top="100.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="12.0" />
+                     </font>
+                  </Button>
                </children>
                <VBox.margin>
                   <Insets />
